# agent-teams

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
dashboard/: index.html
deploy/: agent-teams.service
docs/: deploy-vps.md  getting-started.md
landing/: index.html
swarm_server/: __init__.py  __main__.py  agent.py  browser_gui_tools.py  browser_pool.py  budget.py  cli.py  config.py  credentials.py  hermes_compat.py  master.py  model_config.py  monitoring.py  prompts.py  queue.py  server.py  soul_template.py  tools.py  update_check.py  websocket.py
teams_server/: cli.py  gateway_bridge.py  gateway_config.py  hermes_compat.py  server.py  tools.py
tests/: test_browser_gui.py  test_compaction.py  test_cron_oneshot_and_recall.py  test_gateway.py  test_hermes_compat.py  test_lifecycle.py  test_master_agent.py  test_model_routing.py  test_set_model.py
